kubernetes/main/apps/flux-system/addons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - &host "flux-webhook.${SECRET_DOMAIN}"
      secretName: ${SECRET_DOMAIN/./-}-production-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
